WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279326
CSS counter-* should not eagerly evaluate calc()
https://bugs.webkit.org/show_bug.cgi?id=279326
Summary
CSS counter-* should not eagerly evaluate calc()
Sam Weinig
Reported
2024-09-08 11:34:04 PDT
CSS counter-* should not eagerly evaluate calc()
Attachments
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2024-09-08 11:37:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33295
EWS
Comment 2
2024-09-09 06:27:34 PDT
Committed
283340@main
(5b689e6770dc): <
https://commits.webkit.org/283340@main
> Reviewed commits have been landed. Closing PR #33295 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-09 06:28:12 PDT
<
rdar://problem/135545187
>
EWS
Comment 4
2024-09-20 06:27:20 PDT
Committed
283286.103@safari-7620-branch
(d3a10c2d81b2): <
https://commits.webkit.org/283286.103@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1856 and removing active labels.
Tim Nguyen (:ntim)
Comment 5
2025-01-02 14:51:44 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/49876
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug